FIx select tag background visibility

--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -33,9 +33,9 @@
 
   select {
     margin: 0;
-    padding: 0;
+    padding: 0 15px;
     border: 0!important;
-    background: transparent;
+    background: $color-grey;
     color: $color-warm;
   }
 }
