--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -28,9 +28,9 @@
 
     font-size: 19px;
   }
-  
+
   svg {
-    flex: 1 0 32px;
+    flex: 0 0 32px;
   }
 }
 
